--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Hospital_mgmt_Project.jar
+dist.jar=${dist.dir}/Hospital-Mgmt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Hospital_mgmt_Project
+dist.jlink.output=${dist.jlink.dir}/Hospital-Mgmt
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Hospital_mgmt_Project
+jlink.launcher.name=Hospital-Mgmt
 main.class=ui.Login_Page
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
